<resources>
    <string name="app_name">Ejercicio04Inmobiliaria</string>
    <string name="etiqueta">INFORMACIÓN INMUEBLE</string>
    <string name="direccion">Dirección</string>
    <string name="numero">Número</string>
    <string name="ciudad">Ciudad</string>
    <string name="provincia">Provincia</string>
    <string name="cp">Código Postal</string>
    <integer name="valoracion">5</integer>
    <dimen name="valoracion">5</dimen>
    <string name="eliminar">ELIMINAR INMUEBLE</string>
    <string name="editar">EDITAR INMUEBLE</string>
</resources>